p4/tests/t003.err
Semantic error on line 2: Game object 'rectangle' does not have a parameter called 'q'.
